# book-club-viz

./: Makefile  boohedonists_book_list.xlsx  boohedonists_reviews.json  boohedonists_st_app.py  book_club_viz_utils.py  book_list.xlsx  book_viz_utils.py  chitaem_vmeste_st_app.py  pyproject.toml  st_app.py
boohedonists_files/: boohedonists_book_list.xlsx  boohedonists_reviews.json
chitaem_vmeste_files/: chitaem_vmeste_book_list.xlsx
tests/: test_book_club_viz_utils.py
