[tool.poetry]
name = "book-club-viz"
version = "0.1.0"
description = ""
authors = ["zloy_zhake"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
openpyxl = "^3.1.5"
matplotlib = "3.8.4"
streamlit = "^1.36.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"
ruff = "^0.5.0"
mypy = "^1.10.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
